# thomas-gale

./: CNAME  Cargo.toml  README.md  Trunk.toml  build_engine.sh  index.html  index.scss  package.json  tailwind.config.js
.github/actions/trunk/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: pipeline.yml
src/: app.rs  engine.rs  feed.rs  footer.rs  main.rs  side_bar.rs
src/env/: config.json
src/feed/: post.rs
src/pages/: _app.tsx  _document.tsx  index.tsx
src/side_bar/: bio.rs  links.rs  name.rs  pic.rs  techs.rs
src/styles/: globals.css
styles/: input.css
